[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/main.gd" type="Script" id=1]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="thunderstone_base" type="CheckBox" parent="."]
margin_left = 265.0
margin_top = 135.0
margin_right = 289.0
margin_bottom = 159.0
text = "Thunderstone Base Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thunderstone_wrath" type="CheckBox" parent="."]
margin_left = 265.0
margin_top = 155.0
margin_right = 458.0
margin_bottom = 179.0
text = "Thunderstone Wrath "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thunderstone_doom" type="CheckBox" parent="."]
margin_left = 265.0
margin_top = 175.0
margin_right = 458.0
margin_bottom = 199.0
text = "Thunderstone Doom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thunderstone_dragon" type="CheckBox" parent="."]
margin_left = 265.0
margin_top = 195.0
margin_right = 458.0
margin_bottom = 219.0
text = "Thunderstone Dragon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thunderstone_thorn" type="CheckBox" parent="."]
margin_left = 265.0
margin_top = 215.0
margin_right = 458.0
margin_bottom = 239.0
text = "Thunderstone Thorn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thunderstone_heart" type="CheckBox" parent="."]
margin_left = 265.0
margin_top = 235.0
margin_right = 458.0
margin_bottom = 259.0
text = "Thunderstone Heart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="random" type="Button" parent="."]
margin_left = 295.0
margin_top = 373.0
margin_right = 393.0
margin_bottom = 417.0
text = "Randomize"
__meta__ = {
"_edit_use_anchors_": false
}
